@@ -1,5 +1,11 @@
 use strict;
 use warnings;
+BEGIN {
+    if ($] < 5.014){
+        print "1..0 # Skip: Perl 5.14.0 or later required\n";
+        exit 0;
+    }
+}
 
 use Encode;
 use Test::More tests => 7;
